tests/functionalTests/valid/code/multipleTypeDecl.hs
main, printHello :: IO ();
main = printHello;

printHello = putStr "Hello!\n";
