tests/functionalTests/invalid/code/noMain.hs
func :: IO ();
func = putStr "No main\n";